# compose-copier-template

./: .gitignore  .justfile  .justfile.j2  .pre-commit-config.yaml  LICENSE  README.md  copier.yaml  pyproject.toml
copier.d/: 10_main.yaml  15_proxy.yaml  20_monitoring.yaml  25_sso.yaml  30_database.yaml  50_authentik.yaml  50_traefik.yaml  51_gatus.yaml
src/: .justfile.j2  {% if auth_types %}authentik.tf{% endif %}.j2  {% if proxy_type == 'traefik' %}traefik yml{% endif %}.j2
src/.secrets/: template.yml.j2
src/authentik/: .env.j2  .justfile.j2  compose.yml.j2
src/authentik/.secrets/: authentik.env.j2  db.env.j2  ldap.env.j2  ldap_token.env
src/common/: .gitignore.j2  .justfile.j2  .pre-commit-config.yaml  {% if 'gatus' in monitoring_types %}gatus.yml{% endif %}.j2  {% if proxy_type == 'traefik' %}traefik.yml{% endif %}.j2
src/crafty/: .gitignore  .gitignore.j2  compose.yml.j2  {% if proxy_type == 'traefik' %}traefik yml{% endif %}.j2
src/custom/: {% if auth_types %}authentik.tf{% endif %}.j2
src/flaresolverr/: .justfile.j2  compose.yml.j2
src/gatus/: compose.yml.j2
src/gatus/config.d/: 00-main.yml  (+1 more)
src/prowlarr/: compose.yml.j2  {{ _copier_conf.answers_file }}.j2
src/radarr/: compose.yml.j2  {% if proxy_type == 'traefik' %}traefik.yml{% endif %}.j2
src/sonarr/: .pre-commit-config.yaml  compose.yml.j2  {% if 'gatus' in monitoring_types %}gatus.yml{% endif %}.j2
src/traefik/: compose.yml.j2  config.yml
tests/: conftest.py  test_authentik.py  test_custom.py  test_gatus.py  test_generic.py  test_mediastack.py  test_template.py  test_traefik.py
(+4 files in other folders)
