[project]
name = "compose-copier-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepdiff>=9.0.0",
    "pytest-xdist>=3.8.0",
]

[dependency-groups]
dev = [
    "copier>=9.7.1",
    "pre-commit>=4.6.0",
    "pre-commit-uv>=4.2.1",
    "pytest>=9.0.2",
    "python-on-whales>=0.81.0",
    "yq>=3.4.3",
]

[tool.pytest.ini_options]
addopts = "-s -n auto"
